<resources>
    <string name="app_name">MySecondApp</string>
    <string name="native_title">N A T I V E</string>
    <string name="trav_one">Traveler Joe, 23</string>
    <string name="trav_two">Tourist Jill, 22</string>
    <string name="trav_info">Traveler(s) Info</string>
    <string name="button_like">Like</string>
    <string name="button_pass">Pass</string>
    <string name="trav_three">Tourist Jane, 35</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
